logout and add tag
