# models/user.go
@@ -5,7 +5,7 @@ import (
 )
 
 type User struct {
-	Id       int  `orm:"column(id);auto" description:"数据库id" json:"id"`
+	Id       int    `orm:"column(id);auto" description:"数据库id" json:"id"`
 	Username string `orm:"column(username);size(20)" description:"用户名" json:"username"`
 	Password string `orm:"column(password);size(32)" description:"密码" json:"password"`
 }
@@ -14,7 +14,7 @@ func (m *User) TableName() string {
 	return "user"
 }
 
-func AddUser(username string, password string) (id int,err error) {
+func AddUser(username string, password string) (id int, err error) {
 	o := orm.NewOrm()
 	o.Using("default")
 	var user User
@@ -24,7 +24,7 @@ func AddUser(username string, password string) (id int,err error) {
 	return
 }
 
-func GetUser() (user []User, err error) {
+func GetUsers() (user []User, err error) {
 	var users []User
 	o := orm.NewOrm()
 	_, _err := o.QueryTable("user").All(&users, "Id", "Username")
@@ -33,10 +33,18 @@ func GetUser() (user []User, err error) {
 
 func GetUserByUsername(username string) (user User, err error) {
 	DB := orm.NewOrm()
-	var r0 orm.RawSeter
 	DB.Using("default")
-	r0 = DB.Raw("SELECT * FROM user WHERE username = ?", username)
+	act := DB.Raw("SELECT * FROM user WHERE username = ?", username)
 	var _user User
-	_err := r0.QueryRow(&_user)
+	_err := act.QueryRow(&_user)
 	return _user, _err
+}
+func UpdateTagByUserId(id int, username string) (num int64, err error) {
+	DB := orm.NewOrm()
+	var act orm.RawSeter
+	DB.Using("default")
+	act = DB.Raw("UPDATE user SET username = ? where id = ?", username, id)
+	res, _err := act.Exec()
+	_num, _ := res.RowsAffected()
+	return _num, _err
 }
